sandbox/output
FizzBuzz.java:15: error: cannot find symbol
        result = this.fizzBuzzHandler.handle(number);
                                     ^
  symbol:   method handle(int)
  location: variable fizzBuzzHandler of type Handler
1 error
